# myAES

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.circleci/: @config.yml  config.yml
.circleci/commands/: bump-branch-version.yml  get-pr-branch.yml  poetry-configure.yml  restore-test-cache.yml  save-test-cache.yml  store-test-artifacts.yml
.circleci/executors/: default.yml
.circleci/jobs/: build-test.yml  package-test.yml
.circleci/scripts/: bump-version.sh
.circleci/workflows/: pull-request-tests.yml
.githooks/pre-commit-scripts/: circleci.sh  common.sh  cruft-check.sh  pdoc-gitpages.sh
backendTEMP-main/: .gitignore  .pre-commit-config.yaml  README.md  next.txt  pyproject.toml
backendTEMP-main/.circleci/: config.yml
docs/: AES.html  BinaryGaloisFeild.html  index.html  main.html
docs/myAES/: AES.html  index.html  main.html
myAES/: AES.py  BinaryGaloisFeild.py  main.py
myAES/AES/: AES.py
myAES/GaloisField/: BinaryGaloisFeild.py
tests/: Gf2_mock.py  test_backend.py  test_unit.py
