[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Sean Crowley <smcrowley8@gmail.com>", "Dawid Ryczek <EMAIL>"]
maintainers = ["Sean Crowley <smcrowley8@gmail.com>", "Dawid Ryczek <EMAIL>"]
readme = "README.md"
homepage = ""
repository = "https://github.com/smcrowley8/backendTEMP"
keywords = [
    "Poetry",
    "Python",
    "Webscraping"
]

[tool.poetry.dependencies]
python = "3.8.12"
TikTokApi = "^4.0.4"
pre-commit = "^2.15.0"
flake8 = "^4.0.1"
click = "^8.0.3"
ansicolor = "^0.3.2"
codespell = "^2.1.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.1"
pytest = "^5.2"
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
